--- a/home.html
+++ b/home.html
@@ -184,24 +184,31 @@
 
 
     <div class="js-container-sc9">
+        <img src="Images/primarymail-icon.jpeg" alt="email principal" class="s-img-contact">
         <p class="js-title-contact">
             jeferson0306@gmail.com
         </p>
     </div>
 
     <div class="js-container-sc10">
+        
+            <img src="Images/mail-icon.jpeg" alt="email secundário" class="js-img-contact">
+        
+
         <p class="js-title-contact">
             jeferson0306@msn.com
         </p>
     </div>
 
     <div class="js-container-sc11">
+        <img src="Images/Chat-icon (4).jpeg" alt="celular/telefone">
         <p class="js-title-contact">
             (61) 9 9194-6758
         </p>
     </div>
 
     <div class="js-container-sc12">
+        <img src="Images/Chat-icon (1).jpeg" alt="whatsapp">
         <p class="js-title-contact">
             (61) 9 9194-6758
         </p>
